--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,10 @@ header {
 .logo {
   width: 220px;
   height: 200px;
-  background-image: url("./assets/logomenor.jpg");
+  background-image: url("./assets/logo.jpg");
   background-position: center;
   background-size: cover;
-  border-radius: 60px;
+  border-radius: 100px;
   padding: 0 10px;
 }
 
