--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ header {
     align-items: flex-end;
     font-family: "Titillium Web", sans-serif;
     font-weight: 300;
+    transition: 0.3s ease-in-out;
   }
 
 
