--- a/src/components/Carrousel.css
+++ b/src/components/Carrousel.css
@@ -51,17 +51,20 @@
   }
   
   .carousel-btn.prev {
-    left: 10px;
+    left: 5px;
   }
   
   .carousel-btn.next {
-    right: 10px;
-  }
-  
-  .carousel-btn:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    right: 5px;
   }
 
+  #prev-btn, #next-btn {
+    font-size: 80px;
+    font-weight: 300;
+    color: rgb(28,28,28);
+    color: white;
+  }
+  
   .buy-btn {
     width: 200px;
     height: 80px;
