--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 header {
   width: 100%;
-  height: 220px;
+  height: 240px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,8 +68,8 @@ header {
 
   .description h3 {
     width: 90%;
-    color: white;
-    font-size: 22px;
+    color: rgb(242, 193, 120);
+    font-size: 26px;
     font-family: "Titillium Web", sans-serif;
     font-weight: 300;
   }
@@ -78,6 +78,7 @@ header {
     width: 100%;
     height: 500px;
     background: url("./assets/chicarabranca.avif");
+    background: url("./assets/breakfest.webp");
     background-position: center;
     background-size: cover;
     display: flex;
@@ -87,7 +88,6 @@ header {
     font-weight: 300;
     transition: 0.3s ease-in-out;
   }
-
 
 
 .test {
@@ -114,6 +114,7 @@ button {
     border-radius: 25px;
     margin-bottom: 20px;
     border: none;
+    animation: pulse 2s infinite; 
 }
 
 
@@ -130,4 +131,14 @@ button {
   }
 }
 
-
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);  /* Aumenta 10% */
+  }
+  100% {
+    transform: scale(1);
+  }
+}
