--- a/src/components/Carrousel.css
+++ b/src/components/Carrousel.css
@@ -85,6 +85,7 @@
     background: linear-gradient(to right, rgb(199, 141, 73), rgb(242, 193, 120) );
     border-radius: 10px;
     margin-bottom: 20px;
+    animation: pulse 2s infinite; 
   }
   
   .card-container-top {
@@ -95,7 +96,7 @@
     align-items: center;
     gap: 10px;
     border-radius: 10px 10px 0 0;
-    color: white;
+    
     background: linear-gradient(to right, rgb(199, 141, 73), rgb(242, 193, 120) );
     padding: 0 5px;
   }
@@ -109,7 +110,7 @@
     gap: 10px;
     border-radius: 10px;
     background: rgb(28,28,28);
-    color: white;
+    color: rgb(242, 193, 120);
     padding: 0 5px;
   }
   
@@ -119,4 +120,17 @@
     justify-content: center;
     padding: 0 8px;
     font-size: 20px;
+  }
+
+
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);  /* Aumenta 10% */
+    }
+    100% {
+      transform: scale(1);
+    }
   }
