--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,31 @@ header {
     text-align: center;
   }
 
+  .description-two {
+    width: 100%;
+    height: 150px;
+    background: rgb(28,28,28);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+      .description-p-one {
+        font-size: 28px;
+        color: rgb(242, 193, 120);
+        font-family: "Titillium Web", sans-serif;
+        font-weight: 600;
+        animation: pulse 2s infinite; 
+      }
+
+      .description-p-two {
+        font-size: 28px;
+        color: rgb(242, 193, 120);
+        font-family: "Titillium Web", sans-serif;
+        font-weight: 600;
+        animation: pulse 2s infinite; 
+      }
+
   .description h3 {
     width: 90%;
     color: rgb(242, 193, 120);
@@ -92,8 +117,7 @@ header {
 
 .test {
   width: 100%;
-  height: 600px;
-  background: url("./assets/graos2.png");
+  height: 200px;
   background-position: center;
   background-size: cover;
   display: flex;
@@ -136,7 +160,7 @@ button {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.1);  /* Aumenta 10% */
+    transform: scale(1.1);  
   }
   100% {
     transform: scale(1);
