--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ header {
 
   .description-two {
     width: 100%;
-    height: 150px;
+    height: 130px;
     background: rgb(28,28,28);
     display: flex;
     justify-content: center;
@@ -117,29 +117,32 @@ header {
 
 .test {
   width: 100%;
-  height: 200px;
-  background-position: center;
-  background-size: cover;
+  height: 120px;
   display: flex;
   justify-content: center;
-  align-items: end;
-  display: none;
+  align-items: center;
+  background-image: url("./assets/chicara.jpg");
+  background-position: center;
+  background-size: cover;
+
 }
 
+    button {
+      width: 250px;
+      height: 80px;
+      font-size: 24px;
+      background: linear-gradient(to right, rgb(199, 141, 73), rgb(242, 193, 120) );
+      background: rgb(28,28,28);
+      padding: 0 10px;
+      font-weight: 400;
+      color: rgb(14, 27,42);
+      color: rgb(242, 193, 120);
+      border-radius: 25px;
+      border: 2px solid rgb(242, 193, 120);
+    }
 
-button {
-    width: 200px;
-    height: 60px;
-    font-size: 18px;
-    background: linear-gradient(to right, rgb(199, 141, 73), rgb(242, 193, 120) );
-    padding: 0 10px;
-    font-weight: 400;
-    color: rgb(14, 27,42);
-    border-radius: 25px;
-    margin-bottom: 20px;
-    border: none;
-    animation: pulse 2s infinite; 
-}
+
+
 
 
 @media (min-width: 400px) {
